# dbcaml

./: .envrc  .gitignore  .ocamlformat  CONTRIBUTING.md  README.md  buffer_tools.opam  dbcaml-driver-libsql.opam  dbcaml-driver-postgres.opam  dbcaml-driver-sqlite.opam  dbcaml-driver-turso.opam  dbcaml-examples.opam  dbcaml.opam  dbcaml.opam.template  dbcaml_driver_postgres.opam  docker-compose.yaml  dune-project  flake.nix  heimdal.opam  ocpool.opam  plan.md  querycaml.opam  serde-postgres.opam  serde-postgres.opam.template  silo-postgres.opam  silo-sqlite.opam  silo.opam
.github/ISSUE_TEMPLATE/: dbcaml--bug-report.md  driver--bug-report.md  serde-postgres--bug-report.md  silo--bug-report.md
.github/workflows/: ci.yaml  docs.yaml
_build/: .db  .digest-db  log
_build/default/: META.dbcaml  dbcaml.dune-package  dbcaml.install  dbcaml.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: dbcaml.cma  dbcaml.cmxa  dbcaml.cmxs  dbcaml.ml-gen
_build/default/lib/.dbcaml.objs/byte/: dbcaml.cmi  (+2 more)
_build/default/lib/.merlin-conf/: lib-dbcaml
_build/default/test/.merlin-conf/: exe-test_dbcaml
buffer_tools/: README.md
buffer_tools/lib/: buffer_tools.ml  buffer_tools.mli  dune  encode.ml  encode.mli
buffer_tools/test/: dune  encode_bool_test.ml  encode_float_test.ml  encode_int32_test.ml  encode_string_test.ml  put_length_prefixed_test.ml  put_str.ml
dbcaml/: acceptor.ml  acceptor_pool.ml  connection.ml  connection_manager.ml  connector.ml  dbcaml.ml  driver.ml  dune  error.ml  lib.ml  manager.ml  message.ml  message_passing.ml  param.ml  pg_pool.ml  pool.ml  query.ml  row.ml  storage.ml
dbcaml/lib/: connection.ml  conninfo.ml  dbcaml.ml  driver.ml  dune  holder.ml  manager.ml  message_passing.ml  messages.ml  params.ml  pool.ml  res.ml  storage.ml
dbcaml/test/: dune  test_dbcaml.ml
dbcaml_driver_libsql/lib/: config.ml  connection.ml  dbcaml_driver_sqlite.ml  drivers.ml  dune  libsql_driver.ml  sqlite3_driver.ml
dbcaml_driver_libsql/test/: dune  test_suite.ml
dbcaml_driver_postgres/: authentication.ml  connection.ml  dbcaml_driver_postgres.ml  dune  pg_pool.ml  types.ml
dbcaml_driver_postgres/lib/: authentication.ml  authentication_information.ml  dbcaml_driver_postgres.ml  dbcaml_driver_postgres.mli  dune  executer.ml  message.ml  message_decode.ml  message_format.ml  nonce.ml  oid.ml  param.ml  parse_message.ml  pg.ml  pg_arguments.ml  pg_logger.ml  scram_auth.ml  startup.ml
dbcaml_driver_postgres/lib/messages/lib/: authentication_information.ml  bind.ml  buffer_tools.ml  describe.ml  dune  execute.ml  messages.ml  portal.ml  prepare.ml  query.ml  startup.ml  sync.ml
dbcaml_driver_postgres/lib/messages/test/: dune  escape_test.ml
dbcaml_driver_postgres/test/: connection.ml  dune  escape_test.ml  queries.ml  t.txt  test_suite.ml
dbcaml_driver_sqlite/lib/: dbcaml_driver_sqlite.ml  dune
dbcaml_driver_sqlite/lib/drivers/lib/: connection.ml  drivers.ml  dune  sqlite3_driver.ml
dbcaml_driver_sqlite/lib/drivers/test/: connection.ml  dune  test_suite.ml
dbcaml_driver_turso/lib/: dune
dune.lock/: alcotest.pkg  angstrom.pkg  asn1-combinators.pkg  base64.pkg  bigstringaf.pkg  bytestring.pkg  castore.pkg  colors.pkg  conf-gmp-powm-sec.pkg  conf-gmp.pkg  conf-pkg-config.pkg  conf-zlib.pkg  config.pkg  cryptokit.pkg  cstruct.pkg  digestif.pkg  domain-name.pkg  dune-configurator.pkg  duration.pkg  eqaf.pkg  fmt.pkg  gluon.pkg  gmap.pkg  hkdf.pkg  ipaddr.pkg  kdf.pkg  libc.pkg  lock.dune  logs.pkg  macaddr.pkg  mirage-crypto-ec.pkg  mirage-crypto-pk.pkg  mirage-crypto-rng.pkg  mirage-crypto.pkg  mtime.pkg  ocaml-base-compiler.pkg  ohex.pkg  pbkdf.pkg  ppx_deriving.pkg  ptime.pkg  (+14 more)
examples/: docker-compose.yaml
examples/basic/: dune  main.ml
examples/basic-postgres/: dune  main.ml
examples/basic_pool/: dune  main.ml
examples/basic_postgres/: dune  main.ml
examples/migrations/: 1705516750_test.up.sql  README.md  schema.sql
examples/postgres/basic/: dune  main.ml
examples/postgres/execute/: dune  main.ml
examples/postgres/migrations/: 1705516750_test.down.sql  1705516750_test.up.sql  schema.sql
examples/postgres/query/: dune  main.ml
heimdal/: connection_manager.ml  dune  heimdal.ml  holder.ml  message_passing.ml  storage.ml
lib/: dune  pg_pool.ml
ocpool/: README.md  connection_manager.ml  dune  holder.ml  ocpool.ml
poolparty/: connection_pool.ml  dune  holder.ml  manager.ml  message_passing.ml  pool_manager.ml  poolparty.ml  storage.ml  todo.md
querycaml/: dune  param.ml  querycaml.ml  row.ml
serde-postgres/lib/: dune  row_description.ml  serde_postgres.ml
serde-postgres/test/: dune  escaped_values.ml  record_list.ml  single_record.ml  test_escaped_values.ml  test_serde.ml  test_serde_deserialize.ml  test_serde_deserialize_list.ml  test_suite.ml
silo-postgres/lib/: decode.ml  dune  map.ml  silo_postgres.ml  silo_postgres.mli  silo_postgres.mli_old
silo-postgres/test/: dune  execute.ml  query.ml  test_suite.ml
silo-sqlite/lib/: dune  silo_postgres.mli  silo_sqlite.mli
silo-sqlite/test/: dune  execute.ml  parse_command_complete.ml  query.ml  test_suite.ml
silo/lib/: decode.ml  dune  row.ml  silo.ml  silo.mli  voj.ml
silo/test/: dune  execute.ml  parse_command_complete.ml  postgres_execute.ml  postgres_query.ml  query.ml  test_suite.ml
test/: dune  test_dbcaml.ml
(+7 files in other folders)
